revised for assignment 2

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         <div class="card">
           <div class ="card-header">Assignment 1 Links:</div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="Homework_1/views/form.html">Click Here for the form.html file</a></li>
-            <li class="list-group-item"><a href="Homework_1/views/mypage_bootstrap.html">Click Here for the mypage_bootstrap.html file</a></li>
-            <li class="list-group-item"><a href="Homework_1/views/mypage.html">Click Here for the mypage.html file</a></li>
+            <li class="list-group-item"><a href="Homework_1/views/mypage.html">Click Here for my profile page in simple HTML</a></li>
+            <li class="list-group-item"><a href="Homework_1/views/mypage_bootstrap.html">Click Here for the my profile page with bootstrap</a></li>
+            <li class="list-group-item"><a href="Homework_1/views/form.html">Click Here for to view a simple form</a></li>
+            <div class ="card-header">Assignment 2 Links:</div>
+            <li class="list-group-item"><a href="Homework_2/tic-tac-toe/tic-tac-toe.html">Click Here for a game of tic-tac-toe</a></li>
           </ul>
         </div>
     </body>
